Fixes footer z-index

--- a/css/custom.css
+++ b/css/custom.css
@@ -207,7 +207,7 @@ ul.simple-post-list {
  footer {
  	position: relative;
  	bottom: 0;
- 	z-index: -1;
+ 	z-index: 4;
  	width: 100%;
  	height: 300px;
  	background-color: #333;
